--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,4 +1,6 @@
 .navbarSection {
+    position:sticky;
+    top: 0;
     background-color: rgb(0, 102, 167);
     display: flex;
     justify-content: space-between;
@@ -117,5 +119,49 @@
 .navAccountTextSubHead {
     font-size: 11px;
     color: rgb(85, 204, 246);
+}
 
+@media (max-width: 1074px) {
+    .navLocationContainer {
+        display: none;
+    }
+
+    .navLogoContainer {
+        gap: 1rem;
+    }
+
+    .navOptionsContainer {
+        margin-right: 24px;
+    }
+}
+
+@media (max-width: 674px) {
+
+    .navOptionsContainer {
+        display: none;
+    }
+
+    .navLogoContainer {
+        padding-left: 0;
+        justify-content: start;
+    }
+    
+    .navAccountContainer {
+        display: flex;
+    }
+
+}
+
+@media (max-width: 406px) {
+    .navAccount {
+        font-size: 1.5rem;
+    }
+    .navAccountTextHead {
+        font-size: 10px;
+        text-transform: uppercase;
+    }
+    
+    .navAccountTextSubHead {
+        font-size: 8px;
+    }
 }
