--- a/src/App.css
+++ b/src/App.css
@@ -15,4 +15,9 @@ body {
     display: flex;
 }
 
+@media (max-width: 1336px) {
+    .bodyDivison {
+        flex-direction: column-reverse;
+    }
+}
 
