--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -1,10 +1,135 @@
 .cartContainer {
-    flex: 0.3;
-    
+  flex: 0.3;
+  margin-top: 3rem;
+  height: 24rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  position: sticky;
+  top: 99px;
+  border-top: 3px solid rgb(130, 187, 55);
+  max-width: 20rem;
+
 }
 
-@media (max-width: 1068px) {
-    .cartContainer {
-        display: none;
-    }
+.cartSections {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 20rem;
+}
+
+.cartHead {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+}
+
+.cartItemContainer {
+  display: flex;
+  flex-direction: column;
+  padding: 12px;
+}
+
+.cartItemHead {
+  display: flex;
+  align-items: center;
+  gap: 18px;
+}
+
+.itemImage>img {
+  width: 5.2rem;
+  height: 4.2rem;
+  object-fit: cover;
+  border-radius: 3px;
+}
+
+
+.itemText>h4 {
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: rgb(39, 71, 87);
+}
+
+.itemText>p {
+  margin-top: 0.6rem;
+  font-size: 0.8rem;
+  font-weight: 500;
+  color: rgb(100, 129, 143);
+}
+
+.cartItemFoot {
+  /* display: flex; */
+  /* justify-content: center; */
+}
+
+.itemDetail {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.itemQuantity {
+  display: flex;
+  gap: 12px;
+  border: 1px solid rgb(186, 186, 186);
+  
+}
+
+.quantityBox {
+  border-radius: 3px;
+  padding: 4px;
+  font-size: 16px;
+  font-weight: 600;
+  height:fit-content;
+  cursor: pointer;
+}
+
+.quantityMinus {
+  border-right: 1px solid rgb(186, 186, 186);
+}
+
+.quantityPlus {
+  border-left: 1px solid rgb(186, 186, 186);
+}
+
+.itemPrice {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: rgb(44, 101, 128);
+}
+
+.cartFoot {
+  height: 100px;
+  width: 20rem;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  background-color: rgb(239, 245, 251);
+  box-shadow: rgba(0, 0, 0, 0.12) 0px -0.56rem 0.62rem 0px;
+}
+
+.cartTotalPrice {
+  display: flex;
+  justify-content: space-between;
+  padding: 12px;
+}
+
+.cartTotalPrice>h5 {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.cartCheckoutButton>button {
+  padding: 0.7em 1.5em;
+  width: 100%;
+  height: 2.5rem;
+  background-color: rgb(130, 187, 55);
+  color: #ffffff;
+  border-radius: 3px;
+  text-transform: uppercase;
+  outline: none;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
 }
