make cart component responsive and toggle states to hide/unhide cart

--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,53 @@ body {
 }
 
 .bodyDivison {
-    margin-top: 2rem;
+    margin-top: 1rem;
     display: flex;
+    justify-content: center;
 }
 
-@media (max-width: 1336px) {
-    .bodyDivison {
-        flex-direction: column-reverse;
-    }
+
+.cart {
+    display: none;
 }
+
+.closeButton {
+    display: none;
+}
+
+@media (max-width: 824px) {
+    .cart {
+        display: block;
+        color: #ffffff;
+        font-size: 30px;
+        position: fixed;
+        top: 85%;
+        left: 18px; 
+        z-index: 999;
+        border: 8px solid rgb(0, 102, 167);
+        background-color: rgb(0, 102, 167);
+        border-radius: 50%;
+        cursor: pointer;
+      }
+
+      .cartIconHide {
+        display: none;
+      }
+
+      .closeButtonShow {
+        display: block;
+        color: #ffffff;
+        font-size: 26px;
+        position: fixed;
+        top: 10%;
+        right: 18px; 
+        z-index: 999;
+        border: 1px solid rgb(0, 102, 167);
+        background-color: rgb(0, 102, 167);
+        border-radius: 50%;
+        cursor: pointer;
+      }
+}
+
+
 
