--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -2,12 +2,11 @@
   flex: 0.3;
   margin-top: 3rem;
   height: 24rem;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   position: sticky;
   top: 99px;
   border-top: 3px solid rgb(130, 187, 55);
   max-width: 20rem;
-
+  display: flex;
 }
 
 .cartSections {
@@ -22,6 +21,8 @@
   flex-direction: column;
   width: 100%;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+  overflow-y:scroll;
+  height: 400px;
 }
 
 .cartItemContainer {
@@ -57,10 +58,6 @@
   color: rgb(100, 129, 143);
 }
 
-.cartItemFoot {
-  /* display: flex; */
-  /* justify-content: center; */
-}
 
 .itemDetail {
   margin-top: 1rem;
@@ -104,12 +101,11 @@
   width: 20rem;
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
-  background-color: rgb(239, 245, 251);
-  box-shadow: rgba(0, 0, 0, 0.12) 0px -0.56rem 0.62rem 0px;
 }
 
 .cartTotalPrice {
+  background-color: rgb(239, 245, 251);
+margin-top: 7px;
   display: flex;
   justify-content: space-between;
   padding: 12px;
@@ -132,4 +128,14 @@
   border: none;
   font-weight: bold;
   cursor: pointer;
+}
+
+@media (max-width: 824px) {
+  .cartContainer {
+    display: none;
+  }
+
+  .cartContainerShow {
+    display: block;
+  }
 }
