--- a/src/App.css
+++ b/src/App.css
@@ -1,63 +1,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Figtree:wght@300;400;500;600&display=swap');
 
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    font-family: 'Figtree', sans-serif;
+  font-family: 'Figtree', sans-serif;
 }
 
 .bodyDivison {
-    margin-top: 1rem;
-    display: flex;
-    justify-content: center;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
 }
 
 
 .cart {
-    display: none;
+  display: block;
+  color: #ffffff;
+  font-size: 50px;
+  position: fixed;
+  top: 85%;
+  left: 10%;
+  z-index: 999;
+  border: 8px solid rgb(0, 102, 167);
+  background-color: rgb(0, 102, 167);
+  border-radius: 50%;
+  cursor: pointer;
 }
+
 
 .closeButton {
-    display: none;
+  display: none;
 }
+
 
 @media (max-width: 824px) {
-    .cart {
-        display: block;
-        color: #ffffff;
-        font-size: 30px;
-        position: fixed;
-        top: 85%;
-        left: 18px; 
-        z-index: 999;
-        border: 8px solid rgb(0, 102, 167);
-        background-color: rgb(0, 102, 167);
-        border-radius: 50%;
-        cursor: pointer;
-      }
+  .cart {
+    font-size: 30px;
+  }
 
-      .cartIconHide {
-        display: none;
-      }
+  .cartIconHide {
+    display: none;
+  }
 
-      .closeButtonShow ,#close {
-        display: block;
-        color: #ffffff;
-        font-size: 26px;
-        position: fixed;
-        top: 10%;
-        right: 18px; 
-        z-index: 999;
-        border: 1px solid rgb(0, 102, 167);
-        background-color: rgb(0, 102, 167);
-        border-radius: 50%;
-        cursor: pointer;
-      }
+  .closeButtonShow,
+  #close {
+    display: block;
+    color: #ffffff;
+    font-size: 26px;
+    position: fixed;
+    top: 10%;
+    right: 18px;
+    z-index: 999;
+    border: 1px solid rgb(0, 102, 167);
+    background-color: rgb(0, 102, 167);
+    border-radius: 50%;
+    cursor: pointer;
+  }
 }
-
-
-
