--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -1,7 +1,7 @@
 .cartContainer {
   flex: 0.3;
   margin-top: 3rem;
-  height: 24rem;
+  height: 33rem;
   position: sticky;
   top: 99px;
   border-top: 3px solid rgb(130, 187, 55);
@@ -133,9 +133,9 @@ margin-top: 7px;
 @media (max-width: 824px) {
   .cartContainer {
     display: none;
-    display: block;
+    display: flex;
   }
 
-  .cartContainerShow {
-  }
+  /* .cartContainerShow {
+  } */
 }
